# EstAudio

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
include/: EstAudio.h  EstEncoder.h  EstTypes.h
include/Audio/: Channel.h  Device.h  Sample.h
src/: EstAudio.cpp  EstEncoder.cpp  EstMain.cpp
src/Audio/: Device.cpp  Error.cpp  Internal.h
src/Audio/Channel/: ChannelAttributes.cpp  ChannelControl.cpp  ChannelConverter.cpp  ChannelFileIO.cpp  ChannelInternal.cpp  ChannelInternal.h
src/Audio/Sample/: SampleAttributes.cpp  SampleControl.cpp  SampleFileIO.cpp  SampleInternal.cpp  SampleInternal.h
src/Encoder/: EncoderAttributes.cpp  EncoderExport.cpp  EncoderFileIO.cpp  EncoderInternal.h  EncoderProcessor.cpp
src/Utils/: IO.cpp  IO.h  MD5.cpp  MD5.h
src/Win32/: Resource.aps  Resource.rc
src/third-party-impl/: impl.cpp
test/: CMakeLists.txt  EstMain.cpp
